<resources>
    <string name="app_name">DailyExpenseLogger</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- =============== LoginActivity.java and activity_login.xml  =============== -->
    <string name="skip_signin">Skip, sign in as guest instead</string>
    <string name="google_signin_text">SIGN IN WITH GOOGLE</string>

    <!-- ========================================================================== -->

    <!-- =============== MainActivity.java and activity_main.xml ================== -->
    <string name="fab_menu_item_add_expense">Add expense</string>
    <string name="fab_menu_item_add_income">Add income</string>
    <string name="toolbar_title">Daily Expense Logger</string>
    <string name="edit_budget_dialog_title">Edit Budget</string>
    <string name="budget_display">Remaining balance for this month: </string>
    <string name="savings_title">Current Savings: </string>

    <!-- ========================================================================== -->

    <!-- AddExpenseActivity.java, AddIncomeActivity.java, activity_add_expense.xml and activity_add_income.xml -->
    <string name="expense_description_hint">Enter Description</string>
    <string name="expense_amount_hint">Enter Amount</string>
    <string name="recurring_expense_switch">Recurring Expense</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="frequency_label">Frequency</string>
    <string name="recurring_start_date_label">Start Date</string>
    <string name="recurring_start_time_label">Start Time</string>
    <string name="save_button">Save</string>
    <string name="recurring_income_switch">Recurring Income</string>
    <string name="expense_toolbar_title">Add Expense</string>
    <string name="income_toolbar_title">Add Income</string>
    <string name="update_button">Update</string>
    <string name="edit_expense_toolbar_title">Edit Expense</string>
    <string name="edit_income_toolbar_title">Edit Income</string>
    <string name="set_monthly_income">Set monthly income</string>
    <string name="set_monthly_budget">Set monthly budget</string>
    <string name="expense_tv">Expense</string>
    <string name="income_tv">Income</string>

    <!-- ===================================================================================================== -->

    <!-- ============================== menu_main.xml ============================= -->
    <string name="menu_open_calendar">Open Calendar</string>
    <string name="menu_edit_income">Set monthly income</string>
    <string name="menu_edit_budget">Set monthly budget</string>
    <string name="menu_check_savings">Check savings</string>
    <!-- ========================================================================== -->
</resources>
