<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/open_calendar"
        android:title="@string/menu_open_calendar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_calendar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/edit_income"
        android:title="@string/menu_edit_income"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/edit_budget"
        android:title="@string/menu_edit_budget"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
      android:id="@+id/check_savings"
        android:title="@string/menu_check_savings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/expenses_by_category"
        android:title="See Expenses by category"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>